# PIMLomics

./: README.md  pyproject.toml  slurmscript.py
Analysis/: Cellbox_input.ipynb  CircadianAnalysisFuncs.py  FullPipelineForCellboxOutput_WC.ipynb  FullPipelineForCellboxOutput_analysis.ipynb  Metadata_Perturbation_Passing_QC.csv  fromGene.csv  fromModule.csv  fromRedoxProteomicsDilute.csv  iModulon_analysis.ipynb  iModulon_homology.ipynb
Cellbox/cellbox/cellbox/: model.py
Cellbox/cellbox/cellbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Data/annotation/: All_predicted_TFs.csv  Selongatus_PCC7942_ref_tfs.csv  TRN_complete.csv  annotation_mapping.csv
Data/annotation/COG/: COG.tsv
Data/annotation/KEGG/descriptions/: KEGG_Modules.csv  pathway_descriptions.csv
Data/deseq2/: Log2FC_All_Expression.csv  tf_order.csv
Data/ica/: A.csv  M.csv  imodulon_names.csv
Data/literature_metadata/: CircadianGenes_Markson_2013.xlsm  Light_Sin_Cos.csv  circadian_time_light_Puszynska_2017.csv
Execution_files/Cellbox_Gene/: Cellbox_Gene_sub.py  config.json  expr_matr.csv  node_index.csv  pert_matr.csv
Execution_files/Cellbox_Module/: Cellbox_Module_sub.py  config.json  expr_matr.csv  node_index.csv  pert_matr.csv  sample_order.csv
Preprocessing/: Cellbox_input.ipynb
iModulon/: iModulon_analysis.ipynb  iModulon_homology.ipynb
