[project]
name = "pimlomics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "nbstripout>=0.8.1",
    "networkx>=3.5",
    "powerlaw>=1.5",
    "pymodulon>=0.2.1",
    "wordcloud>=1.9.4",
]
